# PX4-ECL

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  ecl.h
.github/workflows/: build_ekf_flags.yml  build_tests.yml  format_checks.yml  formatting.yml  functional_change_indicator.yml
AlphaFilter/: AlphaFilter.hpp
EKF/: AlphaFilter.hpp  CMakeLists.txt  EKFGSF_yaw.cpp  EKFGSF_yaw.h  EKFGSF_yaw_estimator.cpp  MedianFilter.hpp  RingBuffer.h  Sensor.hpp  SensorRangeFinder.cpp  SensorRangeFinder.hpp  airspeed_fusion.cpp  common.h  control.cpp  covariance.cpp  drag_fusion.cpp  ekf.cpp  ekf.h  ekf_frontend.cpp  ekf_frontend.h  ekf_helper.cpp  estimator_base.cpp  estimator_base.h  estimator_interface.cpp  estimator_interface.h  geo.cpp  gps_checks.cpp  gps_yaw_fusion.cpp  imu_down_sampler.cpp  imu_down_sampler.hpp  mag_control.cpp  mag_fusion.cpp  mathlib.h  optflow_fusion.cpp  range_finder_checks.cpp  sensor_range_finder.cpp  sensor_range_finder.hpp  sideslip_fusion.cpp  terrain_estimator.cpp  utils.cpp  utils.hpp  (+1 more)
EKF/python/ekf_derivation/: 3Dmag_fusion_generated_compare.cpp  3Dmag_generated.cpp  __init__.py  acc_bf_fusion_generated_compare.cpp  acc_bf_generated.cpp  beta_fusion_generated_compare.cpp  code_gen.py  covariance_generated_compare.cpp  flow_fusion_generated_compare.cpp  flow_generated.cpp  flow_generated_alt.cpp  gps_yaw_fusion_generated_compare.cpp  gps_yaw_generated.cpp  mag_decl_fusion_generated_compare.cpp  mag_decl_generated.cpp  main.py  run_test_programs.sh  tas_fusion_generated_compare.cpp  vel_bf_generated_alt.cpp  yaw_fusion_generated_compare.cpp
EKF/python/gsf_ekf_yaw_estimator/: Kalman_gain_generated.cpp  code_gen.py  covariance_prediction_generated.cpp  innovation_variance_generated.cpp  main.py
EKF/tests/base/: base.cpp
airdata/: WindEstimator.cpp  WindEstimator.hpp
astyle/: astylerc  format.sh
attitude_fw/: ecl_controller.cpp  ecl_controller.h  ecl_pitch_controller.cpp  ecl_pitch_controller.h  ecl_roll_controller.cpp  ecl_roll_controller.h  ecl_wheel_controller.cpp  ecl_wheel_controller.h  ecl_yaw_controller.cpp  ecl_yaw_controller.h
filters/: AlphaFilter.hpp  CMakeLists.txt
geo/: geo.cpp  geo.h
geo_lookup/: geo_magnetic_tables.hpp
l1/: ecl_l1_pos_controller.cpp  ecl_l1_pos_controller.h
libgeo/: CMakeLists.txt  geo.h
map_projection/: CMakeLists.txt  map_projection.cpp  map_projection.h
mathlib/: mathlib.h
matlab/scripts/Inertial Nav EKF/: Airspeed.mat  C_code24.txt  Drag.mat  GenerateNavFilterEquations.m  M_code24.txt  Magnetometer.mat  Sideslip.mat  StateAndCovariancePrediction.mat  StatePrediction.mat  SymbolicOutput24.mat  SymbolicOutput24.txt  temp1.mat  temp2.mat  temp3.mat
src/: CMakeLists.txt
src/L1lib/: CMakeLists.txt
src/L1lib/include/L1lib/: position_controller.h
src/L1lib/src/: pos_controller.cpp  pos_controller.h
src/attitude_fwlib/: CMakeLists.txt
src/attitude_fwlib/src/: controller.cpp  controller.h  pitch_controller.cpp  pitch_controller.h  roll_controller.cpp  roll_controller.h  wheel_controller.cpp  wheel_controller.h  yaw_controller.cpp  yaw_controller.h
src/ekflib/: CMakeLists.txt
src/ekflib/src/: airspeed_fusion.cpp  common.h  control.cpp  covariance.cpp  drag_fusion.cpp  ecl.h  ekf.cpp  ekf.h  ekf_helper.cpp  estimator_interface.cpp  estimator_interface.h  gps_checks.cpp  mag_fusion.cpp  optflow_fusion.cpp  sideslip_fusion.cpp  terrain_estimator.cpp  vel_pos_fusion.cpp
src/geolib/: CMakeLists.txt
src/geolib/include/geolib/: geo.h
src/geolib/src/: azimuthal_equidist.cpp  azimuthal_equidist.h  mag_declination.cpp  mag_declination.h
src/mathlib/: CMakeLists.txt
src/mathlib/include/mathlib/: math.h
src/mathlib/src/: Functions.hpp  Limits.cpp  Limits.hpp  LowPassFilter2p.cpp  LowPassFilter2p.hpp  constants.h
src/tecslib/: CMakeLists.txt
src/tecslib/include/tecslib/: tecs.h
src/tecslib/src/: tecs.cpp  tecs.h
src/tests/: CMakeLists.txt
src/tests/testmath/: CMakeLists.txt  testmath.cpp  testmath.h
tecs/: tecs.cpp  tecs.h
test/: CMakeLists.txt  test_AlphaFilter.cpp  test_EKF_basics.cpp  test_EKF_externalVision.cpp  test_EKF_flow.cpp  test_EKF_fusionLogic.cpp  test_EKF_gps_yaw.cpp  test_EKF_imuSampling.cpp  test_EKF_initialization.cpp  test_EKF_jacobian.cpp  test_EKF_ringbuffer.cpp  test_EKF_utils.cpp  test_EKF_withReplayData.cpp  test_SensorRangeFinder.cpp  test_geo.cpp  test_geo_lookup.cpp
test/change_indication/: ekf_gsf_reset.csv  iris_gps.csv
test/sensor_simulator/: CMakeLists.txt  ekf_logger.cpp  ekf_wrapper.cpp  ekf_wrapper.h  flow.cpp  flow.h  gps.cpp  gps.h  range_finder.cpp  range_finder.h  sensor.cpp  sensor.h  sensor_simulator.cpp  sensor_simulator.h
tests/: CMakeLists.txt
tests/testgeo/: CMakeLists.txt  testgeo.cpp  testgeo.h
tools/: format.sh
validation/: CMakeLists.txt  data_validator.cpp  data_validator.h  data_validator_group.cpp  data_validator_group.h  mag_validator.cpp  mag_validator.h
validation/tests/: CMakeLists.txt  test_data_validator.cpp  test_data_validator_group.cpp  tests_common.cpp  tests_common.h
